syntax = "proto3";

import "db_task.proto";

option go_package = "./;db";

message DBClusterResponseStatus {
    int32 code = 1;
    string message = 2;
}

message DBClusterDTO {
    string id = 1;
    string code = 2;
    string name = 3;
    string tenantId = 4;
    string dbPassword = 5;
    string clusterType = 6;
    string versionCode = 7;
    int32 status = 8;
    string tags = 9;
    bool tls = 10;
    string demands = 11;
    int32 workFlowId = 12;
    string ownerId = 13;
    int64 createTime = 14;
    int64 updateTime = 15;
    int64 deleteTime = 16;
}

message DBTiUPConfigDTO {
    int32 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    string content = 4;
    int64 createTime = 5;
}

message DBCreateClusterRequest {
    DBClusterDTO cluster = 1;
}

message DBCreateClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBLoadClusterRequest {
    string clusterId = 1;
}

message DBLoadClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDetailDTO clusterDetail = 2;
}

message DBClusterDisplayDTO {
    DBClusterDTO cluster = 1;
    DBFlowDTO flow = 2;
}

message DBClusterDetailDTO {
    DBClusterDTO cluster = 1;
    DBTiUPConfigDTO tiupConfigRecord = 2;
    DBFlowDTO flow = 3;
}

message DBListClusterRequest {
    DBPageDTO pageReq = 1;
    string clusterId = 2;
    string clusterName = 3;
    string clusterType = 4;
    string clusterStatus = 5;
    string clusterTag = 6;
}

message DBListClusterResponse {
    DBClusterResponseStatus status = 1;
    repeated DBClusterDetailDTO clusters = 2;
    DBPageDTO page = 3;

}

message DBDeleteClusterRequest {
    string clusterId = 1;
}

message DBDeleteClusterResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateClusterStatusRequest {
    string clusterId = 1;
    int32 status = 2;
    bool updateStatus = 3;
    int64 flowId = 4;
    bool updateFlow = 5;
}

message DBUpdateClusterStatusResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
}

message DBUpdateTiupConfigRequest {
    string clusterId = 1;
    string content = 2;
    string tenantId = 3;
}

message DBUpdateTiupConfigResponse {
    DBClusterResponseStatus status = 1;
    DBClusterDTO cluster = 2;
    DBTiUPConfigDTO tiupConfigRecord = 3;
}

message DBPageDTO {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
}

message DBParameterRecordDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    int64 createTime = 4;
    string operatorId = 5;
    string content = 6;
    int64 flowId = 7;
}

message DBSaveParametersRequest {
    DBParameterRecordDTO parameters = 1;
}

message DBSaveParametersResponse {
    DBClusterResponseStatus status = 1;
    DBParameterRecordDTO parameters = 2;
}

message DBGetCurrentParametersRequest {
    string clusterId = 1;
}

message DBGetCurrentParametersResponse {
    DBClusterResponseStatus status = 1;
    DBParameterRecordDTO parameters = 2;
}

message DBBackupRecordDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    int64 startTime = 4;
    int64 endTime = 5;
    string backupRange = 6;
    string backupType = 7;
    string backupMode = 8;
    string operatorId = 9;
    string filePath = 10;
    int64 flowId = 11;
    uint64 size = 12;
}

message DBSaveBackupRecordRequest {
    DBBackupRecordDTO backupRecord = 1;
}

message DBSaveBackupRecordResponse {
    DBClusterResponseStatus status = 1;
    DBBackupRecordDTO backupRecord = 2;
}

message DBUpdateBackupRecordRequest {
    DBBackupRecordDTO backupRecord = 1;
}

message DBUpdateBackupRecordResponse {
    DBClusterResponseStatus status = 1;
}

message DBDeleteBackupRecordRequest {
    int64 id = 1;
}

message DBDeleteBackupRecordResponse {
    DBClusterResponseStatus status = 1;
    DBBackupRecordDTO backupRecord = 2;
}

message DBListBackupRecordsRequest {
    string clusterId = 1;
    int64 startTime = 2;
    int64 endTime = 3;
    DBPageDTO page = 4;
}

message DBDBBackupRecordDisplayDTO {
    DBBackupRecordDTO backupRecord = 1;
    DBFlowDTO flow = 2;
}

message DBListBackupRecordsResponse {
    DBClusterResponseStatus status = 1;
    repeated DBDBBackupRecordDisplayDTO backupRecords = 2;
    DBPageDTO page = 3;
}

message DBQueryBackupRecordRequest {
    string clusterId = 1;
    int64 recordId = 2;
}

message DBQueryBackupRecordResponse {
    DBClusterResponseStatus status = 1;
    DBDBBackupRecordDisplayDTO backupRecords = 2;
}

message DBRecoverRecordDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    int64 createTime = 4;
    string operatorId = 5;
    int64 backupRecordId = 6;
    int64 flowId = 7;
}

message DBSaveRecoverRecordRequest {
    DBRecoverRecordDTO recoverRecord = 1;
}

message DBSaveRecoverRecordResponse {
    DBClusterResponseStatus status = 1;
    DBRecoverRecordDTO recoverRecord = 2;
}

message DBBackupStrategyDTO {
    int64 id = 1;
    string tenantId = 2;
    string clusterId = 3;
    string backupDate = 4;
    string filePath = 5;
    string backupRange = 6;
    string backupType = 7;
    string period = 8;
    int64 createTime = 9;
    int64 updateTime = 10;
}

message DBSaveBackupStrategyRequest {
    DBBackupStrategyDTO strategy = 1;
}

message DBSaveBackupStrategyResponse {
    DBClusterResponseStatus status = 1;
    DBBackupStrategyDTO strategy = 2;
}

message DBQueryBackupStrategyRequest {
    string clusterId = 1;
}

message DBQueryBackupStrategyResponse {
    DBClusterResponseStatus status = 1;
    DBBackupStrategyDTO strategy = 2;
}